observability/monitoring/prometheus-operator/manifests/monitoring-ingresses.yaml
## Middleware
## Strip prefix /grafana
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: strip
#  namespace: observability
#spec:
#  stripPrefix:
#    forceSlash: false
#    prefixes:
#      - /grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
#    traefik.ingress.kubernetes.io/router.middlewares: observability-strip@kubernetescrd
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
#    traefik.ingress.kubernetes.io/router.middlewares: monitoring-mw-admin@kubernetescrd
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /prometheus
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
